force-app/main/default/objects/NEP_RiskThreshold_Config__mdt/NEP_RiskThreshold_Config__mdt.object-meta.xml
<CustomObject>
    <label>NEP Risk Threshold Config</label>
    <pluralLabel>NEP Risk Threshold Configs</pluralLabel>
    <description>Per-model (and UNMATCHED fallback) temperature/vibration thresholds consumed by NEPRiskScoringService. DeveloperName must align exactly with Asset.Model__c picklist values, plus the reserved UNMATCHED fallback row.</description>
</CustomObject>