force-app/main/default/objects/NEP_RiskThreshold_Config__mdt/fields/Is_Fallback__c.field-meta.xml
<CustomField>
    <fullName>Is_Fallback__c</fullName>
    <label>Is Fallback</label>
    <description>True for the single row used when a reading is unmatched (or matched to an Asset with no recognised Model__c).</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>