force-app/main/default/objects/NEP_RiskThreshold_Config__mdt/fields/Temp_Threshold_C__c.field-meta.xml
<CustomField>
    <fullName>Temp_Threshold_C__c</fullName>
    <label>Temp Threshold (C)</label>
    <description>Temperature elevated when Temperature_C__c is strictly greater than this value.</description>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>