force-app/main/default/objects/NEP_RiskThreshold_Config__mdt/fields/Vibration_Threshold_Hz__c.field-meta.xml
<CustomField>
    <fullName>Vibration_Threshold_Hz__c</fullName>
    <label>Vibration Threshold (Hz)</label>
    <description>Vibration elevated when Vibration_Hz__c is strictly greater than this value.</description>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>